Add first meadia queries

--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
       <div class="contact-me">
         <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
         <form action="https://formspree.io/f/xvolvbqj" method="POST" class="footer-form">
-          <input type="text" name="name" id="name" placeholder="First Name" required maxlength="30">
-          <input type="text" name="surname" id="surname" placeholder="Last Name" required maxlength="30">
+          <input type="text" name="name" id="name" placeholder="Full Name" required maxlength="30">
           <input type="email" name="email" id="email" placeholder="Email adress" required>
         <textarea class="form-textarea" id="textarea" maxlength="500" placeholder="Hello Mariane. Glad to see you |" required></textarea>
         <button type="submit" class="get-in-touch">Get in touch</button>
