--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="queries.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -113,44 +114,71 @@
           <a class="see-button-full" href="#">See Project</a>
         </div>
         <div class="fourth-box">
-          <h3>Data Dashboard <br> Healthcare</h3></h1>
-          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+          <h3>
+            Data Dashboard <br />
+            Healthcare
+          </h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
           <ul>
-            <li class="programming-boxes" ><a href="#">html</a></li>
+            <li class="programming-boxes"><a href="#">html</a></li>
             <li class="programming-boxes"><a href="#">bootstrap</a></li>
             <li class="programming-boxes"><a href="#">Ruby</a></li>
           </ul>
         </div>
-        <div class="fifth-box"><h3>Website Portfolio</h3></h1>
-          <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+        <div class="fifth-box">
+          <h3>Website Portfolio</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
           <ul>
-            <li class="programming-boxes" ><a href="#">html</a></li>
+            <li class="programming-boxes"><a href="#">html</a></li>
             <li class="programming-boxes"><a href="#">bootstrap</a></li>
             <li class="programming-boxes"><a href="#">Ruby</a></li>
-          </ul></div>
-          <div class="fifth-box row-two-box"><h3>Website Portfolio</h3></h1>
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-            <ul>
-              <li class="programming-boxes" ><a href="#">html</a></li>
-              <li class="programming-boxes"><a href="#">bootstrap</a></li>
-              <li class="programming-boxes"><a href="#">Ruby</a></li>
-            </ul></div>
-          <div class="fourth-box">
-            <h3>Data Dashboard <br> Healthcare</h3></h1>
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-            <ul>
-              <li class="programming-boxes" ><a href="#">html</a></li>
-              <li class="programming-boxes"><a href="#">bootstrap</a></li>
-              <li class="programming-boxes"><a href="#">Ruby</a></li>
-            </ul>
-          </div>
-          <div class="fifth-box"><h3>Website Portfolio</h3></h1>
-            <p>A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-            <ul>
-              <li class="programming-boxes" ><a href="#">html</a></li>
-              <li class="programming-boxes"><a href="#">bootstrap</a></li>
-              <li class="programming-boxes"><a href="#">Ruby</a></li>
-            </ul></div>
+          </ul>
+        </div>
+        <div class="fifth-box row-two-box">
+          <h3>Website Portfolio</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul>
+            <li class="programming-boxes"><a href="#">html</a></li>
+            <li class="programming-boxes"><a href="#">bootstrap</a></li>
+            <li class="programming-boxes"><a href="#">Ruby</a></li>
+          </ul>
+        </div>
+        <div class="fourth-box">
+          <h3>
+            Data Dashboard <br />
+            Healthcare
+          </h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul>
+            <li class="programming-boxes"><a href="#">html</a></li>
+            <li class="programming-boxes"><a href="#">bootstrap</a></li>
+            <li class="programming-boxes"><a href="#">Ruby</a></li>
+          </ul>
+        </div>
+        <div class="fifth-box">
+          <h3>Website Portfolio</h3>
+          <p>
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required. has been the industry's standard
+          </p>
+          <ul>
+            <li class="programming-boxes"><a href="#">html</a></li>
+            <li class="programming-boxes"><a href="#">bootstrap</a></li>
+            <li class="programming-boxes"><a href="#">Ruby</a></li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -158,70 +186,118 @@
       <div class="top-about-me">
         <div class="text-about-me">
           <h3>About me</h3>
-          <p>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-        <a href="#">Get My Resume</a>
+          <p>
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hestiate to contact me.
+          </p>
+          <a href="#">Get My Resume</a>
         </div>
-        <img class="last-bg" src="img/aboutme-bg.png" alt="Different shapes">
+        <img class="last-bg" src="img/aboutme-bg.png" alt="Different shapes" />
       </div>
-      <hr class="about-me-line">
+      <hr class="about-me-line" />
       <div class="languages">
         <ul class="language-box">
-          <li><img src="img/Rectangle1.png" alt="rectangular shape"><span class="language-text-heading">Language</span><ul class="language-item">
-            <li class="first-item">Javascript</li>
-            <li>Ruby</li>
-            <li>Html</li>
-            <li>Css</li>
-          </ul></li>
-          <li><img src="img/Rectangle3.png" alt="rectangular shape"> <span class="language-text-heading">Frameworks</span><ul class="language-item">
-            <li class="first-item">Bootstrap</li>
-            <li>Ruby on Rails</li>
-            <li>RSPec</li>
-            <li>CapyBara</li>
-            <li>Selenium</li>
-          </ul></li>
-          <li><img src="img/Rectangle2.png" alt="rectangular shape"><span class="language-text-heading">Skills</span><ul class="language-item">
-            <li class="first-item">Codekit</li>
-            <li>Github</li>
-            <li>Codeopen</li>
-            <li>Gitlab</li>
-            <li>Terminal</li>
-          </ul></li>
+          <li>
+            <img
+              class="rectangular"
+              src="img/Rectangle1.png"
+              alt="rectangular shape"
+            /><span class="language-text-heading">Language</span>
+            <ul class="language-item">
+              <li class="first-item">Javascript</li>
+              <li>Ruby</li>
+              <li>Html</li>
+              <li>Css</li>
+            </ul>
+          </li>
+          <li>
+            <img src="img/Rectangle3.png" alt="rectangular shape" />
+            <span class="language-text-heading">Frameworks</span>
+            <ul class="language-item">
+              <li class="first-item">Bootstrap</li>
+              <li>Ruby on Rails</li>
+              <li>RSPec</li>
+              <li>CapyBara</li>
+              <li>Selenium</li>
+            </ul>
+          </li>
+          <li>
+            <img src="img/Rectangle2.png" alt="rectangular shape" /><span
+              class="language-text-heading"
+              >Skills</span
+            >
+            <ul class="language-item">
+              <li class="first-item">Codekit</li>
+              <li>Github</li>
+              <li>Codeopen</li>
+              <li>Gitlab</li>
+              <li>Terminal</li>
+            </ul>
+          </li>
         </ul>
       </div>
     </section>
     <footer class="footer">
       <div class="contact-me">
-        <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-        <form action="https://formspree.io/f/xvolvbqj" method="POST" class="footer-form">
-          <input type="text" name="name" id="name" placeholder="Full Name" required maxlength="30">
-          <input type="email" name="email" id="email" placeholder="Email adress" required>
-        <textarea class="form-textarea" id="textarea" maxlength="500" placeholder="Hello Mariane. Glad to see you |" required></textarea>
-        <button type="submit" class="get-in-touch">Get in touch</button>
+        <h3>
+          I'm always interested in hearing about new projects, so if you'd like
+          to chat please get in touch.
+        </h3>
+        <form
+          action="https://formspree.io/f/xvolvbqj"
+          method="POST"
+          class="footer-form"
+        >
+          <input
+            type="text"
+            name="name"
+            id="name"
+            placeholder="Full Name"
+            required
+            maxlength="30"
+          />
+          <input
+            type="email"
+            name="email"
+            id="email"
+            placeholder="Email adress"
+            required
+          />
+          <textarea
+            class="form-textarea"
+            id="textarea"
+            maxlength="500"
+            placeholder="Hello Mariane. Glad to see you |"
+            required
+          ></textarea>
+          <button type="submit" class="get-in-touch">Get in touch</button>
         </form>
       </div>
-        <hr class="last-line"/>
-        <ul class="icons">
-          <li>
-            <a href="#"
-              ><ion-icon class="icons-last" name="logo-github"></ion-icon
-            ></a>
-          </li>
-          <li>
-            <a href="#"
-              ><ion-icon class="icons-last" name="logo-linkedin"></ion-icon
-            ></a>
-          </li>
-          <li>
-            <a href="#"
-              ><ion-icon class="icons-last" name="logo-twitter"></ion-icon
-            ></a>
-          </li>
-          <li>
-            <a href="#"
-              ><ion-icon class="icons-last" name="logo-whatsapp"></ion-icon
-            ></a>
-          </li>
-        </ul>
+      <hr class="last-line" />
+      <ul class="icons">
+        <li>
+          <a href="#"
+            ><ion-icon class="icons-last" name="logo-github"></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a href="#"
+            ><ion-icon class="icons-last" name="logo-linkedin"></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a href="#"
+            ><ion-icon class="icons-last" name="logo-twitter"></ion-icon
+          ></a>
+        </li>
+        <li>
+          <a href="#"
+            ><ion-icon class="icons-last" name="logo-whatsapp"></ion-icon
+          ></a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
