Fix mobile version

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <li class="programming-boxes"><a href="#">Ruby</a></li>
           </ul>
         </div>
-        <div class="fifth-box">
+        <div class="fifth-box last-work">
           <h3>Website Portfolio</h3>
           <p>
             A daily selection of privately personalized reads; no accounts or
@@ -200,11 +200,10 @@
       <div class="languages">
         <ul class="language-box">
           <li>
-            <img
-              class="rectangular"
-              src="img/Rectangle1.png"
-              alt="rectangular shape"
-            /><span class="language-text-heading">Language</span>
+            <img src="img/Rectangle1.png" alt="rectangular shape" /><span
+              class="language-text-heading"
+              >Language</span
+            >
             <ul class="language-item">
               <li class="first-item">Javascript</li>
               <li>Ruby</li>
@@ -213,7 +212,11 @@
             </ul>
           </li>
           <li>
-            <img src="img/Rectangle3.png" alt="rectangular shape" />
+            <img
+              class="rectangular"
+              src="img/Rectangle3.png"
+              alt="rectangular shape"
+            />
             <span class="language-text-heading">Frameworks</span>
             <ul class="language-item">
               <li class="first-item">Bootstrap</li>
