--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
     </section>
 
     <section class="my-work">
-      <h2>My Recent Works</h2>
-      <img class="line-top" src="img/line.png" alt="line" />
+      <div class="wrapper-1">
+        <h2>My Recent Works</h2>
+        <hr />
+        <img class="line-top" src="img/line.png" alt="line" />
+      </div>
       <div class="work-grid-box">
         <div class="first-box">
           <img src="img/lady-athlet.png" alt="Lady athlet" />
