--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script src="script.js" defer></script>
     <title>Jahongir Yusupov's Portfolio page</title>
   </head>
   <body>
+    
     <header class="header">
       <a class="header-name" href="#">Yusupov Jahongir</a>
       <nav>
@@ -52,7 +54,17 @@
         </li>
       </ul>
     </nav>
-    <section class="main-page">
+
+    <nav>
+      <ul class="responsive">
+        <li class="close-icon"><a class="main-nav-link" href="#"><ion-icon name="close-outline"></ion-icon></a></li>
+        <li class="main-nav-link2 child1"><a href="#portfolio">Porfolio</a></li>
+        <li class="main-nav-link2 child2"><a href="#about">About</a></li>
+        <li class="main-nav-link2 child3"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+
+    <section class="main-page" id="main-page">
       <ul class="social-icons">
         <li>
           <a class="social-icon-item" href="#"
@@ -87,7 +99,7 @@
       <img src="img/pic-header.png" alt="Different geometric shapes picture" />
     </section>
 
-    <section class="my-work">
+    <section class="my-work" id="portfolio">
       <div class="wrapper-1">
         <h2>My Recent Works</h2>
         <hr />
@@ -188,7 +200,7 @@
       </div>
     </section>
 
-    <section class="about-me">
+    <section class="about-me" id="about">
       <div class="top-about-me">
         <div class="text-about-me">
           <h3>About me</h3>
@@ -253,7 +265,7 @@
       </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer" id="contact">
       <div class="contact-me">
         <h3>
           I'm always interested in hearing about new projects, so if you'd like
