Add dynamic cards

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
         </div>
       </div>
         </div>
-    </section>    
-    
+    </section>   
+
+    <div id="container-main">
     <header class="header">
       <a class="header-name" href="#">Yusupov Jahongir</a>
       <nav>
@@ -129,95 +130,18 @@
       </div>
       <div class="work-grid-box">
         <div class="first-box">
-          <img
-            src="img/lady-athlet.png"
-            alt="Lady athlet showing performance"
-          />
-          <div class="first-box-text">
-            <h3>Multi-Post stories</h3>
-            <p>
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard dummy text
-              ever since the 1500s, when an unknown printer took a standard
-              dummy text.
-            </p>
-            <ul class="programming-languages">
-              <li class="pr-lang-items"><a href="#">css</a></li>
-              <li class="pr-lang-items"><a href="#">html</a></li>
-              <li class="pr-lang-items"><a href="#">bootstrap</a></li>
-              <li class="pr-lang-items"><a href="#">Ruby</a></li>
-            </ul>
-            <a class="see-button" href="#">See project</a>
-          </div>
         </div>
         <div class="third-box">
-          <a class="see-button-full" href="#">See Project</a>
         </div>
         <div class="fourth-box">
-          <!-- <h3>
-            Data Dashboard <br />
-            Healthcare
-          </h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul>
-            <li class="programming-boxes"><a href="#">html</a></li>
-            <li class="programming-boxes"><a href="#">bootstrap</a></li>
-            <li class="programming-boxes"><a href="#">Ruby</a></li>
-          </ul> -->
         </div>
         <div class="fifth-box">
-          <h3>Website Portfolio</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul>
-            <li class="programming-boxes"><a href="#">html</a></li>
-            <li class="programming-boxes"><a href="#">bootstrap</a></li>
-            <li class="programming-boxes"><a href="#">Ruby</a></li>
-          </ul>
-        </div>
-        <div class="fifth-box row-two-box">
-          <h3>Website Portfolio</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul>
-            <li class="programming-boxes"><a href="#">html</a></li>
-            <li class="programming-boxes"><a href="#">bootstrap</a></li>
-            <li class="programming-boxes"><a href="#">Ruby</a></li>
-          </ul>
         </div>
         <div class="fourth-box">
-          <h3>
-            Data Dashboard <br />
-            Healthcare
-          </h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul>
-            <li class="programming-boxes"><a href="#">html</a></li>
-            <li class="programming-boxes"><a href="#">bootstrap</a></li>
-            <li class="programming-boxes"><a href="#">Ruby</a></li>
-          </ul>
         </div>
-        <div class="fifth-box last-work">
-          <h3>Website Portfolio</h3>
-          <p>
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required. has been the industry's standard
-          </p>
-          <ul>
-            <li class="programming-boxes"><a href="#">html</a></li>
-            <li class="programming-boxes"><a href="#">bootstrap</a></li>
-            <li class="programming-boxes"><a href="#">Ruby</a></li>
-          </ul>
+        <div class="fourth-box">
+        </div>
+        <div class="fourth-box last-work">
         </div>
       </div>
     </section>
@@ -347,5 +271,6 @@
         </li>
       </ul>
     </footer>
+  </div>
   </body>
 </html>
