--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="container2">
         <img class="pop-img" src="img/mobile-popup.png" alt="Number 10 with red background">
         <div>
-        <p class="pop-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essent</p>
+        <p class="pop-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also</p>
         <div class="pop-buttons">
           <div class="pop-button"><a href="#">See Live</a><ion-icon class="icons-pop" name="open-outline"></ion-icon></div>
           <div class="pop-button"><a href="#">See Source</a><ion-icon class="icons-pop" name="logo-github"></ion-icon></div>
